--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -172,7 +172,12 @@ bind @ rotate-window -Z
 
 bind f last-pane -Z
 bind-key C-e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
+
+# https://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
+bind-key < choose-window 'join-pane  -h -s "%%"'
+bind-key > choose-window 'break-pane -d -s "%%" -t :'
 # }}}
+
 # }}}
 
 # == Plugins == {{{1
