--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -64,23 +64,14 @@ unbind [
 bind v copy-mode
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi r send-keys -X rectangle-toggle
-bind -T copy-mode-vi c send-keys -X cancel
+# bind -T copy-mode-vi c send-keys -X cancel
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# 'y' use copy-pipe-and-cancel
-bind -T copy-mode-vi y send -X copy-pipe-and-cancel "win32yank.exe -i"
-
-# enable mouse drag for copy-pipe-and-cancel
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
-
-# <prefix> p pastes from clip board
 unbind -T prefix p
-bind p run "win32yank.exe -o | tmux load-buffer - && tmux paste-buffer"
+bind p paste-buffer
 
-# unbind p
-# bind p paste-buffer # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
-bind b list-buffers  # list paste buffers
+# bind b list-buffers  # list paste buffers
 # }}}1
 
 # == Mapings  == {{{1
