feat(tmux): disable f/F key bind

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -125,7 +125,7 @@ unbind C-p
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
-bind f last-window
+# bind f last-window
 
 set -s command-alias[10] lzg='display-popup -h80% -w80% -d "#{pane_current_path}" -E lazygit'
 set -s command-alias[11] pope='display-popup -h80% -w80% -d "#{pane_current_path}" -E'
@@ -161,7 +161,7 @@ bind -r L resize-pane -R 5
 
 bind @ rotate-window -Z
 
-bind F last-pane -Z
+# bind F last-pane -Z
 bind-key C-e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
 # https://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
