feat(tmux): add tmux-fastcopy

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -184,6 +184,11 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin 'wfxr/tmux-fzf-url'
 # set -g @plugin 'laktak/extrakto'
 
+# set -g @plugin 'abhinav/tmux-fastcopy'
+set-option -g @fastcopy-action 'tmux load-buffer -w -'
+# go install github.com/abhinav/tmux-fastcopy@latest
+bind-key f run-shell -b tmux-fastcopy
+
 # https://github.com/tmux-plugins/tpm
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
