refactor(tmux): some update

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -32,6 +32,7 @@ set -g escape-time 10
 
 # Set vi-mode
 set -g mode-keys vi
+# set -g status-keys vi
 
 set -g monitor-activity off
 #}}}1
@@ -77,34 +78,38 @@ bind P choose-buffer # choose which buffer to paste from
 # }}}1
 
 # == Mapings  == {{{1
+
 # == General ==  {{{2
+# Edit config file
+bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
+# Reload config file
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
+
+# Don't suspend-client
+unbind C-z
+
 unbind t
 # Toggle status bar
 bind t set status
 
-# don't suspend-client
-unbind C-z
-
+# # Toggle mouse
 # bind C-m set mouse\; display-message "mouse is now \"#{?mouse,on,off}\""
 
-# Edit configuration
-bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
-# Reload config file
-bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
 # }}}
 
 # == Session ==  {{{2
-# Fuzzy matching session navigation via fzf utility instead of the default "choose-tree"
+# Kill Session
+bind c-x kill-session
+
+# # Fuzzy matching session navigation via fzf utility instead of the default "choose-tree"
 # bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --exit-0 | xargs tmux switch-client -t"
 # bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
-# kill Session
-bind c-x kill-session
 # }}}
 
 # == Window ==  {{{2
-bind n setw synchronize-panes
-bind C-m setw monitor-activity
+# Kill window
+bind X kill-window
 
 # Create a new window
 bind c new-window -c "#{pane_current_path}"
@@ -114,84 +119,86 @@ bind C command-prompt -p "Name of new window: " "new-window -n '%%' -c '#{pane_c
 bind -r \[ swap-window -t -1\; select-window -t -1
 bind -r \] swap-window -t +1\; select-window -t +1
 
-# kill window
-bind X kill-window
-
 # Window navigation
-# bind C-n next-window
-# bind C-p previous-window
-unbind C-n
-unbind C-p
-# bind -r C-h previous-window # select previous window
-# bind -r C-l next-window     # select next window
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind -r C-n next-window
+bind -r C-p previous-window
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
 
 # bind f last-window
 
-set -s command-alias[10] lzg='display-popup -h80% -w80% -d "#{pane_current_path}" -E lazygit'
-set -s command-alias[11] pope='display-popup -h80% -w80% -d "#{pane_current_path}" -E'
+# Toggle synchronize panes
+bind n setw synchronize-panes
+
+# Toggle monitor activity
+bind C-m setw monitor-activity
+
 # }}}
 
 # == Pane == {{{2
-# pane spliting
+# Kill Pane
+bind x kill-pane
+
+# Pane spliting
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 unbind \"
 bind - split-window -v -c "#{pane_current_path}"
-# split windows like vim
-# bind C-v split-window -h -c '#{pane_current_path}'
-# bind C-s split-window -v -c '#{pane_current_path}'
+# Split windows like vim
+bind C-v split-window -h -c '#{pane_current_path}'
+bind C-s split-window -v -c '#{pane_current_path}'
 
-# Kill Pane
-bind x kill-pane
-
-# unbind P
+# # unbind P: for choosing buffer
 # bind P display-panes
 
 # Pane navigation
-bind -r h select-pane -LZ                   # h 等于向左移动光标
-bind -r j select-pane -DZ                   # j 向下移动光标
-bind -r k select-pane -UZ                   # k 向上移动光标
-bind -r l select-pane -RZ                   # l 向右移动光标
+bind -r h select-pane -LZ  
+bind -r j select-pane -DZ  
+bind -r k select-pane -UZ  
+bind -r l select-pane -RZ  
+bind -r C-h select-pane -LZ
+bind -r C-j select-pane -DZ
+bind -r C-k select-pane -UZ
+bind -r C-l select-pane -RZ
 
-# Resize-pane
+# bind F last-pane -Z
+
+# Resize pane
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-bind @ rotate-window -Z
-
-# bind F last-pane -Z
-bind-key C-e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
+# bind @ rotate-window -Z
 
 # https://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
-bind-key < choose-window 'join-pane  -h -s "%%"'
-bind-key > choose-window 'break-pane -d -s "%%" -t :'
+# src-pane/dst-pane: mysession:mywindow.pane_id
+bind-key   @ choose-window 'join-pane -h -s "%%"'
+# bind-key < command-prompt -p "join pane from: " "join-pane -h -s '%%'"
+# bind-key > command-prompt -p "send pane to: "   "join-pane -h -t '%%'"
 # }}}
 
+# }}}
+
+# == Commands  == {{{1
+set -s command-alias[10] lzg='display-popup -h80% -w80% -d "#{pane_current_path}" -E lazygit'
+set -s command-alias[11] pope='display-popup -h80% -w80% -d "#{pane_current_path}" -E'
 # }}}
 
 # == Plugins == {{{1
 # install: prefix + I
 # update: prefix + U
 # remove: prefix + alt + u
-set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# set -g @plugin 'wfxr/tmux-fzf-url'
-# set -g @plugin 'laktak/extrakto'
+# https://github.com/tmux-plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # set -g @plugin 'abhinav/tmux-fastcopy'
 set-option -g @fastcopy-action 'tmux load-buffer -w -'
 # go install github.com/abhinav/tmux-fastcopy@latest
 bind-key f run-shell -b tmux-fastcopy
 
-# https://github.com/tmux-plugins/tpm
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
 # }}}1
