feat(tmux): update

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -1,3 +1,9 @@
+# Check for true color support using:
+# - `tmux info | grep -e RGB -e Tc`
+#   should return:
+#    197: RGB: (flag) true
+#    223: Tc: (flag) true
+
 # == General  == {{{1
 unbind C-b
 set -g prefix C-f
@@ -54,9 +60,10 @@ set -g automatic-rename on
 set -g default-terminal "tmux-256color"
 
 set -sa terminal-overrides ',*:Tc'          # Enable truecolor
+set -sa terminal-overrides ",*:RGB"  # Enable truecolor
 # set -sa terminal-overrides ',*:sitm=\E[3m'  # Enable italics
-# set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
-# set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color
+set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
+set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
 
 # theme
 source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf
