feat(tmux): disable c-n/c-p for windows

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -127,8 +127,8 @@ bind -r \[ swap-window -t -1\; select-window -t -1
 bind -r \] swap-window -t +1\; select-window -t +1
 
 # Window navigation
-bind -r C-n next-window
-bind -r C-p previous-window
+# bind -r C-n next-window
+# bind -r C-p previous-window
 # bind -r C-h select-window -t :-
 # bind -r C-l select-window -t :+
 
