feat(nvim): create dapui element for dap exception

--- a/xdg_config/nvim/.luarc.json
+++ b/xdg_config/nvim/.luarc.json
@@ -7,7 +7,9 @@
     "checkThirdParty": false,
     "library": [
       "$VIMRUNTIME/lua",
-      "$XDG_DATA_HOME/nvim/lazy/lazy.nvim/lua"
+      "$XDG_DATA_HOME/nvim/lazy/lazy.nvim/lua",
+      "$XDG_DATA_HOME/nvim/lazy/nvim-dap/lua",
+      "$XDG_DATA_HOME/nvim/lazy/nvim-dap-ui/lua"
     ]
   }
 }
