feat(nvim): update...

--- a/xdg_config/nvim/.luarc.json
+++ b/xdg_config/nvim/.luarc.json
@@ -9,7 +9,8 @@
       "$VIMRUNTIME/lua",
       "$XDG_DATA_HOME/nvim/lazy/lazy.nvim/lua",
       "$XDG_DATA_HOME/nvim/lazy/nvim-dap/lua",
-      "$XDG_DATA_HOME/nvim/lazy/nvim-dap-ui/lua"
+      "$XDG_DATA_HOME/nvim/lazy/nvim-dap-ui/lua",
+      "$XDG_DATA_HOME/nvim/lazy/harpoon/lua/"
     ]
   }
 }
