--- a/xdg_config/Brewfile
+++ b/xdg_config/Brewfile
@@ -53,6 +53,7 @@ cask "rar"
 cask "rectangle"
 cask "spotify"
 cask "stats"
+cask "ghostty"
 cask "visual-studio-code"
 vscode "github.copilot"
 vscode "github.copilot-chat"
