Refactor tmux config

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -4,146 +4,73 @@
 #    197: RGB: (flag) true
 #    223: Tc: (flag) true
 
-# == General  == {{{1
+# Use "tmux-256color" if available, to enable more capabilities.
+if-shell 'infocmp tmux-256color' 'set -g default-terminal "tmux-256color"' 'set -g default-terminal "screen-256color"'
+set -sa terminal-overrides ',*:Tc'                 # Enable truecolor
+set -sa terminal-overrides ",*:RGB"                # Enable truecolor
+# set -sa terminal-overrides ',*:sitm=\E[3m'         # Enable italics
+# set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
+# set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
+
+
 unbind C-b
 set -g prefix C-f
 bind c-f send-prefix
 
-set -g set-clipboard on
-
-set -g default-command "${SHELL}"
-
+########################
+# option
+########################
 set -g mouse off
-set -g focus-events on
-set -g history-limit 102400
-
-# Repeat time limit (ms)
-set -g repeat-time 300
-set -g escape-time 10
-
-# Set vi-mode
 set -g mode-keys vi
-# set -g status-keys vi
-
+set -g focus-events on
+set -g set-clipboard on
+set -g history-limit 102400
 set -g monitor-activity off
-#}}}1
+set -g repeat-time 200
+set -g escape-time 2
+# set -g default-command "${SHELL}"
 
-# == Display  == {{{1
-# Index starts from 1
-set -g base-index 1
-set -g pane-base-index 1
-
-# set -g status-position top
-
-# Renumber windows when a window is closed
-set -g renumber-windows on
-
-set -g automatic-rename on
-
-# Set terminal to 256 color
-# set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
-
-set -sa terminal-overrides ',*:Tc'          # Enable truecolor
-set -sa terminal-overrides ",*:RGB"  # Enable truecolor
-# set -sa terminal-overrides ',*:sitm=\E[3m'  # Enable italics
-set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
-set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
-
-# theme
-source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf
-#}}}1
-
-# == Copy Mode  == {{{1
-unbind [
+########################
+# bind
+########################
+bind c-x kill-session
+bind X kill-window
+bind x kill-pane
+# Copy mode
 bind v copy-mode
-
 bind -T copy-mode-vi v send-keys -X begin-selection
-# bind -T copy-mode-vi c send-keys -X cancel
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
+# Buffer
 unbind -T prefix p
 bind p paste-buffer
-
-bind P choose-buffer # choose which buffer to paste from
-# bind b list-buffers  # list paste buffers
-# }}}1
-
-# == Mapings  == {{{1
-
-# == General ==  {{{2
-# Edit config file
-bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
-# Reload config file
-bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
-
-# Don't suspend-client
-unbind C-z
-
+bind P choose-buffer 
+# Status line
 unbind t
-# Toggle status bar
 bind t set status
 
-# # Toggle mouse
-# bind C-m set mouse\; display-message "mouse is now \"#{?mouse,on,off}\""
-
-# }}}
-
-# == Session ==  {{{2
-# Kill Session
-bind c-x kill-session
-
-# # Fuzzy matching session navigation via fzf utility instead of the default "choose-tree"
-# bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --exit-0 | xargs tmux switch-client -t"
-# bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-
-# }}}
-
-# == Window ==  {{{2
-# Kill window
-bind X kill-window
-
-# Create a new window
+####### Window #############
+# Create Window
 bind c new-window -c "#{pane_current_path}"
 bind C command-prompt -p "Name of new window: " "new-window -n '%%' -c '#{pane_current_path}'"
-
 # Move windows
 bind -r \[ swap-window -t -1\; select-window -t -1
 bind -r \] swap-window -t +1\; select-window -t +1
-
-# Window navigation
-# bind -r C-n next-window
-# bind -r C-p previous-window
+# Navigation windows
+bind -r C-n next-window
+bind -r C-p previous-window
 # bind -r C-h select-window -t :-
 # bind -r C-l select-window -t :+
 
-# bind f last-window
-
-# Toggle synchronize panes
-bind n setw synchronize-panes
-
-# Toggle monitor activity
-bind C-m setw monitor-activity
-
-# }}}
-
-# == Pane == {{{2
-# Kill Pane
-bind x kill-pane
-
+####### Pane #############
 # Pane spliting
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 unbind \"
 bind - split-window -v -c "#{pane_current_path}"
-# Split windows like vim
+# Vim style spliting
 bind C-v split-window -h -c '#{pane_current_path}'
 bind C-s split-window -v -c '#{pane_current_path}'
-
-# # unbind P: for choosing buffer
-# bind P display-panes
-
-# Pane navigation
+# Navigation pane
 bind -r h select-pane -LZ  
 bind -r j select-pane -DZ  
 bind -r k select-pane -UZ  
@@ -152,26 +79,33 @@ bind -r C-h select-pane -LZ
 bind -r C-j select-pane -DZ
 bind -r C-k select-pane -UZ
 bind -r C-l select-pane -RZ
-
-# bind F last-pane -Z
-
 # Resize pane
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# bind @ rotate-window -Z
+# Toggle monitor activity
+bind C-m setw monitor-activity
 
-# https://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
-# src-pane/dst-pane: mysession:mywindow.pane_id
-bind-key   @ choose-window 'join-pane -h -s "%%"'
-# bind-key < command-prompt -p "join pane from: " "join-pane -h -s '%%'"
-# bind-key > command-prompt -p "send pane to: "   "join-pane -h -t '%%'"
-# }}}
+# Edit & Reload config file
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
+bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
 
-# }}}
+########################
+# UI
+########################
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
 
+set -g automatic-rename on
+# Rename window to current directory tail
+set -g automatic-rename-format '#{b:pane_current_path}'
+
+# Set the terminal title
+set -g set-titles on
+set -g set-titles-string '[#{session_name}]:#{pane_current_path}'
 
 # == Plugins == {{{1
 # install: prefix + I
@@ -191,5 +125,7 @@ bind-key f run-shell -b tmux-fastcopy
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
 # }}}1
+
+source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf # theme
 
 ## vim: foldmethod=marker
