Add regex-url for fastcopy

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -203,6 +203,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # set -g @plugin 'abhinav/tmux-fastcopy'
 set-option -g @fastcopy-action 'tmux load-buffer -w -'
+set-option -g @fastcopy-regex-url '\b[a-z]+://[[:alnum:]\.\-\_\/]+'
 # go install github.com/abhinav/tmux-fastcopy@latest
 bind-key f run-shell -b tmux-fastcopy
 
