Add output selecter for tmux

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -127,5 +127,6 @@ run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
 # }}}1
 
 source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf # theme
+source -q $XDG_CONFIG_HOME/tmux/output_selecter.tmux
 
 ## vim: foldmethod=marker
