Add shell-integration for ghostty

--- a/xdg_config/ghostty/config
+++ b/xdg_config/ghostty/config
@@ -11,6 +11,8 @@ window-save-state = never
 
 confirm-close-surface = false
 
+shell-integration = zsh
+
 # keybindings
 ## NOTE: super is command on mac
 
