Some tmux bindings

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -92,6 +92,15 @@ bind C-m setw monitor-activity
 bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
 bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
 
+# Send the command to all panes/windows in current session
+unbind E
+bind E command-prompt -p "Command(all panes in session):" \
+         "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
+                | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
+                
+# select last window
+bind -r \\ select-window -l
+
 ########################
 # UI
 ########################
