Duplicate tmux pane

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -101,6 +101,8 @@ bind E command-prompt -p "Command(all panes in session):" \
 # select last window
 bind -r \\ select-window -l
 
+bind-key -T prefix u run-shell '$XDG_CONFIG_HOME/tmux/scripts/_tmux_duplicate_pane.sh -h'
+
 ########################
 # UI
 ########################
