Add osc 133 for tmux

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -40,6 +40,9 @@ bind x kill-pane
 bind v copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi ] send-keys -X next-prompt
+bind -T copy-mode-vi [ send-keys -X previous-prompt
+
 # Buffer
 unbind -T prefix p
 bind p paste-buffer
