ghostty clipboard stuff

--- a/xdg_config/ghostty/config
+++ b/xdg_config/ghostty/config
@@ -16,6 +16,9 @@ confirm-close-surface = false
 
 shell-integration = zsh
 
+clipboard-read = allow
+clipboard-write = allow
+
 # keybindings
 ## NOTE: super is command on mac
 
