--- a/xdg_config/Brewfile
+++ b/xdg_config/Brewfile
@@ -1,15 +1,11 @@
-tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
+brew "ast-grep"
 brew "bat"
 brew "btop"
-brew "cloc"
 brew "cmake"
 brew "delve"
-brew "libgit2"
 brew "eza"
 brew "fd"
 brew "fzf"
-brew "gettext"
 brew "gh"
 brew "git-absorb"
 brew "git-flow"
@@ -18,31 +14,31 @@ brew "golangci-lint"
 brew "gopls"
 brew "hurl"
 brew "just"
-brew "lpeg"
+brew "lua"
 brew "lua-language-server"
+brew "luajit"
+brew "luarocks"
+brew "neovim"
 brew "node"
+brew "oven-sh/bun/bun"
 brew "ripgrep"
-brew "ast-grep"
 brew "scc"
 brew "starship"
 brew "stylua"
-brew "taplo"
 brew "tmux"
 brew "tmuxp"
 brew "tree"
-brew "tree-sitter"
 brew "uv"
 brew "zig"
 brew "zls"
 brew "zoxide"
-brew "oven-sh/bun/bun"
-cask "basictex"
 cask "calibre"
 cask "discord"
 cask "dropbox"
 cask "font-fira-code"
 cask "font-fira-mono-nerd-font"
 cask "font-jetbrains-mono-nerd-font"
+cask "ghostty"
 cask "google-chrome"
 cask "hammerspoon"
 cask "hiddenbar"
@@ -55,7 +51,9 @@ cask "rar"
 cask "rectangle"
 cask "spotify"
 cask "stats"
-cask "ghostty"
 cask "visual-studio-code"
+tap "homebrew/bundle"
+tap "homebrew/cask-fonts"
+tap "oven-sh/bun"
 vscode "github.copilot"
 vscode "github.copilot-chat"
