remove zsh completions

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ xdg_config/zsh/.zcompdump
 xdg_config/zsh/.zsh_history
 xdg_config/zsh/.zsh_sessions/
 xdg_config/zsh/.zcompcache/
+xdg_config/zsh/zsh-completions
 xdg_config/zsh/zsh-conf/custom.zsh
 
 xdg_config/tmux/plugins/
