tmux: set the terminal title to pane title

--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -119,7 +119,9 @@ set -g automatic-rename-format '#{b:pane_current_path}'
 
 # Set the terminal title
 set -g set-titles on
-set -g set-titles-string '[#{session_name}]:#{pane_current_path}'
+# set -g set-titles-string '[#{session_name}]:#{pane_current_path}'
+# https://github.com/neovim/neovim/issues/12944#issuecomment-698056591
+set-option -g set-titles-string '#{pane_title}' # Title of pane (can be set by application)
 
 # == Plugins == {{{1
 # install: prefix + I
