--- a/.projections.json
+++ b/.projections.json
@@ -8,6 +8,9 @@
   "xdg_config/zsh/starship/starship.toml": {
     "type": "startship"
   },
+  "xdg_config/nvim/init.lua": {
+    "type": "nvim"
+  },
   "xdg_config/tmux/tmux.conf": {
     "type": "tmux"
   }
