--- a/xdg_config/nvim/.projections.json
+++ b/xdg_config/nvim/.projections.json
@@ -22,6 +22,9 @@
   "lua/liu/plugins/*.lua": {
     "type": "plugin_spec"
   },
+  "snippets/*.json": {
+    "type": "snippet"
+  },
   "after/ftplugin/*.lua": {
     "type": "ftplugin"
   },
