--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -12,14 +12,11 @@ set -sa terminal-overrides ",*:RGB"                # Enable truecolor
 # set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
 # set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
 
-
 unbind C-b
 set -g prefix C-f
 bind c-f send-prefix
 
-########################
-# option
-########################
+####### option {{{
 set -g mouse off
 set -g mode-keys vi
 set -g focus-events on
@@ -29,29 +26,26 @@ set -g monitor-activity off
 set -g repeat-time 200
 set -g escape-time 2
 # set -g default-command "${SHELL}"
+# }}}
 
-########################
-# bind
-########################
-bind c-x kill-session
-bind X kill-window
-bind x kill-pane
-# Copy mode
+####### bind {{{
+# Edit & Reload config file
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
+bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
+
+######## Copy Mode{{{
 bind v copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi ] send-keys -X next-prompt
 bind -T copy-mode-vi [ send-keys -X previous-prompt
+# }}}
 
-# Buffer
-unbind -T prefix p
-bind p paste-buffer
-bind P choose-buffer 
-# Status line
-unbind t
-bind t set status
+bind c-x kill-session
+bind X kill-window
+bind x kill-pane
 
-####### Window #############
+# Window {{{
 # Create Window
 bind c new-window -c "#{pane_current_path}"
 bind C command-prompt -p "Name of new window: " "new-window -n '%%' -c '#{pane_current_path}'"
@@ -64,7 +58,13 @@ bind -r C-p previous-window
 # bind -r C-h select-window -t :-
 # bind -r C-l select-window -t :+
 
-####### Pane #############
+# select last window
+bind -r \\ select-window -l
+# Toggle monitor activity
+bind C-m setw monitor-activity
+# }}}
+
+# Pane {{{
 # Pane spliting
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
@@ -87,28 +87,29 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+# }}}
 
-# Toggle monitor activity
-bind C-m setw monitor-activity
+# Buffer {{{
+unbind -T prefix p
+bind p paste-buffer
+bind P choose-buffer 
+# }}}
 
-# Edit & Reload config file
-bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
-bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
+# Status line
+unbind t
+bind t set status
 
 # Send the command to all panes/windows in current session
-unbind E
-bind E command-prompt -p "Command(all panes in session):" \
+unbind S
+bind S command-prompt -p "Command(all panes in session):" \
          "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
                 | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
-                
-# select last window
-bind -r \\ select-window -l
+# Duplicate Pane
+bind-key -T prefix y run-shell '$XDG_CONFIG_HOME/tmux/scripts/_tmux_duplicate_pane.sh -h'
+source -q $XDG_CONFIG_HOME/tmux/output_selecter.tmux
+# }}}
 
-bind-key -T prefix u run-shell '$XDG_CONFIG_HOME/tmux/scripts/_tmux_duplicate_pane.sh -h'
-
-########################
-# UI
-########################
+####### UI {{{
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
@@ -123,26 +124,27 @@ set -g set-titles on
 # https://github.com/neovim/neovim/issues/12944#issuecomment-698056591
 set-option -g set-titles-string '#{pane_title}' # Title of pane (can be set by application)
 
-# == Plugins == {{{1
+source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf # theme
+# }}}
+
+####### Plugins {{{
 # install: prefix + I
 # update: prefix + U
 # remove: prefix + alt + u
 
-# https://github.com/tmux-plugins/tpm
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# # https://github.com/tmux-plugins/tpm
+# set -g @plugin 'tmux-plugins/tpm'
+# # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+#
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
 
-# set -g @plugin 'abhinav/tmux-fastcopy'
-set-option -g @fastcopy-action 'tmux load-buffer -w -'
-set-option -g @fastcopy-regex-url '\b[a-z]+://[[:alnum:]\.\-\_\/]+'
-# go install github.com/abhinav/tmux-fastcopy@latest
-bind-key f run-shell -b tmux-fastcopy
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
 # }}}1
 
-source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf # theme
-source -q $XDG_CONFIG_HOME/tmux/output_selecter.tmux
+# go install github.com/abhinav/tmux-fastcopy@latest
+set-option -g @fastcopy-action 'tmux load-buffer -w -'
+set-option -g @fastcopy-regex-url '\b[a-z]+://[[:alnum:]\.\-\_\/]+'
+bind-key f run-shell -b tmux-fastcopy
+
 
 ## vim: foldmethod=marker
