--- a/xdg_config/ghostty/config
+++ b/xdg_config/ghostty/config
@@ -14,7 +14,7 @@ window-save-state = never
 
 confirm-close-surface = false
 
-shell-integration = zsh
+# shell-integration = zsh
 
 clipboard-read = allow
 clipboard-write = allow
