--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -8,9 +8,9 @@
 if-shell 'infocmp tmux-256color' 'set -g default-terminal "tmux-256color"' 'set -g default-terminal "screen-256color"'
 set -sa terminal-overrides ',*:Tc'                 # Enable truecolor
 set -sa terminal-overrides ",*:RGB"                # Enable truecolor
-# set -sa terminal-overrides ',*:sitm=\E[3m'         # Enable italics
-# set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
-# set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
+set -sa terminal-overrides ',*:sitm=\E[3m'         # Enable italics
+set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
+set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
 
 unbind C-b
 set -g prefix C-f
