--- a/xdg_config/tmux/nord.tmux.conf
+++ b/xdg_config/tmux/nord.tmux.conf
@@ -12,7 +12,7 @@ set-option -g status-right '#{prefix_highlight}#{?#{==:#{@prefix},off},#[fg=#BF6
 
 #+ Panes +
 set-option -g pane-border-status bottom
-set-option -g pane-border-format " #{?pane_active,#{?#{==:#{@prefix},off},#[fg=#BF616A],}*,}#{pane_index} #{pane_current_command} "
+set-option -g pane-border-format " #{?pane_active,#{?#{==:#{@prefix},off},#[fg=#BF616A],}*,}#{pane_index} #{pane_current_command} #{?#{==:#{status},off}, (#{window_index}/#{session_windows}:#{window_name}),}"
 set-option -g pane-active-border-style fg="#4C566A"
 set-option -g pane-border-style fg="#3B4252"
 
