--- a/xdg_config/nvim/.projections.json
+++ b/xdg_config/nvim/.projections.json
@@ -1,16 +1,16 @@
 {
   "after/lsp/*.lua": {
     "type": "lsp",
-    "alternate": "lua/liu/lsp/servers/{}.lua"
+    "alternate": "lua/liu/lsp/servers/{}.lua",
+    "template": [
+      "---@type vim.lsp.Config",
+      "local Config = {open}{close}",
+      "return Config"
+    ]
   },
   "lua/liu/lsp/servers/*.lua": {
     "type": "lsp_ex",
-    "alternate": "after/lsp/{}.lua",
-    "template": [
-      "---@type vim.lsp.Config",
-      "local Config = {}",
-      "return Config"
-    ]
+    "alternate": "after/lsp/{}.lua"
   },
   "lua/liu/lsp/init.lua": {
     "type": "lsp_init"
