nvim: emmyrc.json? not work

--- a/xdg_config/nvim/.emmyrc.json
+++ b/xdg_config/nvim/.emmyrc.json
@@ -1,16 +1,10 @@
 {
+  "$schema": "https://raw.githubusercontent.com/EmmyLuaLs/emmylua-analyzer-rust/refs/heads/main/crates/emmylua_code_analysis/resources/schema.json",
   "workspace": {
-    "enableReindex": false,
-    "encoding": "utf-8",
-    "ignoreDir": [],
-    "ignoreGlobs": [],
     "library": [
       "$VIMRUNTIME/lua",
-      "$XDG_CONFIG_HOME/nvim/lua"
-    ],
-    "moduleMap": [],
-    "preloadFileSize": 0,
-    "reindexDuration": 5000,
-    "workspaceRoots": []
+      "$XDG_CONFIG_HOME/nvim/lua",
+      "$XDG_DATA_HOME/nvim/lazy/lazy.nvim/lua"
+    ]
   }
 }
