--- a/xdg_config/Brewfile
+++ b/xdg_config/Brewfile
@@ -52,6 +52,7 @@ cask "rectangle"
 cask "spotify"
 cask "stats"
 cask "visual-studio-code"
+cask "lunarbar"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "oven-sh/bun"
