--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -37,6 +37,7 @@ bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf
 bind v copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi Y send-keys -X copy-selection
 bind -T copy-mode-vi ] send-keys -X next-prompt
 bind -T copy-mode-vi [ send-keys -X previous-prompt
 # }}}
