--- a/run/loon.conf
+++ b/run/loon.conf
@@ -1,55 +1,36 @@
 [General]
-ip-mode = v4-only
-dns-server = system
-ipv6 = false
-skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com
-bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-
-# DNS server
-# dns服务，system表示系统自带dns服务器 # https://iqdns.xyz/all.html
-# dns-server = system,1.0.0.1,8.8.8.8,114.114.114.114,119.29.29.29,223.5.5.5
+ip-mode = dual # v4-only, dual, ipv4-preferred, ipv6-Preferred
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
+bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,169.254.0.0/16,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
+# === DNS Server: https://nsloon.app/docs/DNS
+dns-server = system,1.0.0.1,8.8.8.8,114.114.114.114,119.29.29.29,223.5.5.5
 doh-server = https://1.12.12.12/dns-query,https://223.5.5.5/dns-query
-# doq-server = quic://c.passcloud.xyz:784,quic://dns.adguard-dns.com
-# doh3-server = https://223.5.5.5/dns-query,https://223.6.6.6/dns-query
-
-# 是否允许wifi下共享网络
+doq-server = quic://c.passcloud.xyz:784,quic://dns.adguard-dns.com
+doh3-server = https://223.5.5.5/dns-query,https://223.6.6.6/dns-query
+# === Wifi Access
 allow-wifi-access = false
 wifi-access-http-port = 1088
 wifi-access-socks5-port = 1099
-
-# 节点测速时的url
-proxy-test-url = http://cp.cloudflare.com/generate_204
-internet-test-url = http://wifi.vivo.com.cn/generate_204
-test-timeout = 3
-interface-mode = auto
-
-# 资源解析器
-# resource-parser = http://www.example.com/parser.js
-
-# 设置响应ssid环境下使用的策略，如"loon-wifi5g":DIRECT，表示在loon-wifi5g这个wifi网络下使用直连模式，"cellular":PROXY，表示在蜂窝网络下使用代理模式，"default":RULE，默认使用分流模式
-# ssid-trigger = SSID:DIRECT
-
-# 以下配置的域名不会使用fakeip进行映射
-# real-ip = *.apple.com, *apple.com
-
-# 一个节点连续失败几次后进行节点切换
-switch-node-after-failure-times = 3
-
+# === Tesing URL
+# proxy-test-url = http://cp.cloudflare.com/generate_204
+# internet-test-url = http://wifi.vivo.com.cn/generate_204
+# test-timeout = 3
+# === MISC
+hijack-dns = ""
+# ssid-trigger = "loon-wifi5g":DIRECT,"cellular":PROXY,"default":RULE
+real-ip = *.apple.com,*.icloud.com
+interface-mode = Auto # Auto, Cellular, Performace, Balance
+resource-parser = https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-parser.loon.min.js
 geoip-url = https://gitlab.com/Masaiki/GeoIP2-CN/-/raw/release/Country.mmdb
 
-# [Proxy]
-# 内置 DIRECT、REJECT 策略
-# 内置 PROXY 指向本地节点或者订阅节点中的任何一个（有本地节点默认指向第一个本地节点，当没有本地节点但有订阅节点时，指向第一个订阅的第一个节点，本地节点和订阅节点都不存在时指向DIRECT）
-
-
-# [Remote Proxy]
-# 订阅节点
-# 别名 = 订阅URL
-
-
 [Proxy]
+# 内置 DIRECT、REJECT 策略；
+# 内置 PROXY 指向本地节点或者订阅节点中的任何一个，
+# 有本地节点默认指向第一个本地节点，当没有本地节点但有订阅节点时，指向第一个订阅的第一个节点，本地节点和订阅节点都不存在时指向 DIRECT
 [Remote Proxy]
 [Remote Filter]
+# 订阅节点
+# 别名 = 订阅URL
 # 筛选订阅节点，筛选后的结果可加入到策略组中，目前支持三种筛选方式
 # NodeSelect: 使用在UI上选择的节点。
 # NameKeyword: 根据提供的关键词对订阅中所有节点的名称进行筛选，使用筛选后的节点。
@@ -65,7 +46,6 @@ geoip-url = https://gitlab.com/Masaiki/GeoIP2-CN/-/raw/release/Country.mmdb
 英国节点 = NameRegex, FilterKey = "(?i)(英|GB|United Kindom)"
 
 [Proxy Group]
-# 选择节点模式
 PH = url-test,菲国节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/flags_png/PH.png
 HK = url-test,香港节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/flags_png/HK.png
 TW = url-test,台湾节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/flags_png/TW.png
@@ -73,50 +53,28 @@ JP = url-test,日本节点,url = http://cp.cloudflare.com/generate_204,interval 
 KR = url-test,韩国节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/flags_png/KR.png
 SG = url-test,狮城节点,url = http://cp.cloudflare.com/generate_204,interval = 600,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/flags_png/SG.png
 US = select,美国节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/flags_png/US.png
-# 无内置PROXY节点？
-PROXY = select,Default,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Proxy.png
 
-Default = select,HK,TW,JP,KR,US,SG,PH,PROXY,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Default.png
+Default = select,HK,TW,JP,KR,US,SG,PH,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Default.png
+Apple = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Apple.png
+Spotify = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Spotify.png
+# Speedtest = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Speedtest.png
+# Amazon = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Amazon.png
+# PayPal = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/PayPal.png
+YouTube = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/YouTube.png
+# Twitch = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Twitch.png
+# Instagram = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Instagram.png
 
-Apple = select,DIRECT,HK,TW,JP,KR,US,SG,PH,PROXY,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Apple.png
-
-Spotify = select,PH,HK,TW,JP,KR,US,SG,PH,PROXY,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Spotify.png
-
-# Speedtest = select,HK,TW,JP,KR,US,SG,PH,PROXY,DIRECT,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Speedtest.png
-
-# Amazon = select,PROXY,HK,TW,JP,KR,US,SG,PH,DIRECT,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Amazon.png
-PayPal = select,PROXY,HK,TW,JP,KR,US,SG,PH,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/PayPal.png
-# YouTube = select,PROXY,HK,TW,JP,KR,US,SG,PH,DIRECT,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/YouTube.png
-# Twitch = select,PROXY,HK,TW,JP,KR,US,SG,PH,DIRECT,img-url=https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Twitch.png
-Instagram = select,PROXY,HK,TW,JP,KR,US,SG,PH,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Instagram.png
-
-# TikTok = select,HK,TW,JP,KR,US,SG,PH,PROXY,DIRECT
-# Netflix = select,HK,TW,JP,KR,US,SG,PH,PROXY,DIRECT
-# Microsoft = select,HK,TW,JP,KR,US,SG,PROXY,DIRECT
-OpenAI = select,HK,TW,JP,KR,US,SG,PROXY,DIRECT,url = http://cp.cloudflare.com/generate_204
-
-# url-test模式，给提供的url发出http header请求，根据返回结果，选择测速最快的节点，默认间隔600s，测速超时时间5s，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
-# Auto = url-test,1,2,3,4,Subs,url = http://bing.com/,interval = 600
-# fallback模式，和url-test类似，不同的是会根据顺序返回第一个可用的节点，为了避免资源浪费，建议节点数不要过多，只支持单个节点和远端节点，其他会被忽略
-# Auto1 = fallback,1,2,3,4,Subs,url = http://bing.com/,interval = 600
-# 别名 = ssid，默认 = 策略， 蜂窝 = 策略， ssid名称 = 策略
-# SSID = ssid, default = PROXY, cellular = DIRECT, "DivineEngine" = PROXY
-#负载均衡，可选三种算法：random：随机选择策略组可用节点，round-robin：轮询策略组可用节点，pcc：在random基础上，针对相同host使用同一节点，此处url用来测试节点可用性，每隔interval进行一次测速，max-timeout参数用于筛选测试时间超过max-timeout的节点为不可用节点
-# LoadBalance = load-balance,node1,node2,remoteNodes, url = http://bing.com, interval = 600,algorithm = pcc, max-timeout=3000
-# 广告模式
+# TikTok = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH
+# Netflix = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH
+# Microsoft = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH
+# OpenAI = select,Default,DIRECT,HK,TW,JP,KR,US,SG,PH
 # Advertising = select,REJECT,DIRECT
-# 白名单模式 PROXY，黑名单模式 DIRECT
-Final = select,PROXY,DIRECT,Default,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Final.png
+
+Final = select,Default,DIRECT,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/img/Final.png
 
 [Rule]
-DOMAIN,deepseek.com,PROXY
-DOMAIN,chat.deepseek.com,Final
 DOMAIN,browser-intake-datadoghq.com,DIRECT
 IP-CIDR,8.134.125.204/32,DIRECT,no-resolve
-DOMAIN,www.bbc.co.uk,PROXY
-DOMAIN,bing.com,PROXY
-DOMAIN,microsoft.com,PROXY
-DOMAIN,aliyuncs.com,DIRECT
 # Local RULE
 # Type:DOMAIN-SUFFIX,DOMAIN,DOMAIN-KEYWORD,USER-AGENT,URL-REGEX,IP-CIDR
 # Strategy:DIRECT,Default,REJECT
@@ -124,16 +82,11 @@ DOMAIN,aliyuncs.com,DIRECT
 # DOMAIN,google.com,Default
 # DOMAIN,pdst.fm,Default
 # GeoIP China
-
-DOMAIN-SUFFIX,quora.com,Default
-DOMAIN-SUFFIX,quoracdn.net,Default
-
 GEOIP,CN,DIRECT
 FINAL,Final
 
 [Remote Rule]
 https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt, policy=REJECT, tag=Advertising, enabled=true
-# https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/rules/loon/Advertising.list, policy=REJECT, tag=Advertising,enabled=true
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising.list, policy=REJECT, tag=Advertising,enabled=true
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Advertising/Advertising_Domain.list, policy=REJECT, tag=Advertising_Domain,enabled=true
 
@@ -150,35 +103,31 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 
 # FitnessPlus
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/FitnessPlus/FitnessPlus.list, policy=Default, tag=FitnessPlus, enabled=true
-
 # Apple
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TestFlight/TestFlight.list, policy=Apple, tag=TestFlight, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 
-# OpenAI
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/OpenAI/OpenAI.list, policy=OpenAI, tag=OpenAI, enabled=true
-
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Amazon/Amazon.list, policy=Amazon, tag=Amazon, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Spotify/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=PayPal, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Instagram/Instagram.list, policy=Instagram, tag=Instagram, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list, policy=PayPal, tag=PayPal, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Instagram/Instagram.list, policy=Instagram, tag=Instagram, enabled=true
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/TikTok/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=Speedtest, tag=Speedtest, enabled=true
 
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Reddit/Reddit.list, policy=Default, tag=Reddit, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Discord/Discord.list, policy=Default, tag=Discord, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Reddit/Reddit.list, policy=Default, tag=Reddit, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Discord/Discord.list, policy=Default, tag=Discord, enabled=true
 
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list, policy=Default, tag=Google, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GoogleVoice/GoogleVoice.list, policy=Default, tag=GoogleVoice, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Google/Google.list, policy=Default, tag=Google, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GoogleVoice/GoogleVoice.list, policy=Default, tag=GoogleVoice, enabled=true
 
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Twitch/Twitch.list, policy=PROXY, tag=Twitch, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list, policy=PROXY, tag=YouTube, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Twitch/Twitch.list, policy=Default, tag=Twitch, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/YouTube/YouTube.list, policy=Default, tag=YouTube, enabled=true
 # https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Netflix/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=PROXY, tag=GlobalMedia, enabled=true
+# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=Default, tag=GlobalMedia, enabled=true
 
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list, policy=PROXY, tag=Proxy, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list, policy=PROXY, tag=Proxy_Domain, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy.list, policy=Default, tag=Proxy, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Proxy/Proxy_Domain.list, policy=Default, tag=Proxy_Domain, enabled=true
 
 [Rewrite]
 # Redirect Google Search Service
@@ -217,15 +166,12 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # https://example.com/loon.js, tag=scripts, enable=true
 
 [Plugin]
-https://gitlab.com/lodepuly/vpn_tool/-/raw/master/Tool/Loon/Plugin/Switch_github_mirror.plugin, enabled=true
 # plugin-url tag=tag,proxy=插件中PROXY所指向的策略,enable=true
 # plugin策略可设置为DIRECT,REJECT,PROXY，其中PROXY为用户在app中手动映射的策略，rule后不跟随策略默认使用PROXY
 # example: https://raw.githubusercontent.com/Loon0x00/LoonExampleConfig/master/Rewrite/AutoRewrite_Example.list,tag=boxjs,enable=true
-# https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rewrite/Loon/AdvertisingLite/AdvertisingLite.plugin, tag=AdvertisingLite, enabled=true
-https://raw.githubusercontent.com/gh-liu/dotfiles/master/run/modules/General.plugin, tag=General, enabled=false
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/DNS.plugin, tag=DNS, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/sgmodule/HTTPDNS.Block.sgmodule, tag=HTTPDNSBlockDNS, enabled=true
 
 [MITM]
 skip-server-cert-verify = false
 enable = false
+
+# vim: ft=toml
