--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -sa terminal-overrides ",*:RGB"                # Enable truecolor
 set -sa terminal-overrides ',*:sitm=\E[3m'         # Enable italics
 set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
 set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
+set -ga terminal-features ",*:hyperlinks"
 
 unbind C-b
 set -g prefix C-f
@@ -26,6 +27,8 @@ set -g monitor-activity off
 set -g repeat-time 200
 set -g escape-time 2
 # set -g default-command "${SHELL}"
+set -g allow-passthrough all
+set -g extended-keys on
 # }}}
 
 ####### bind {{{
