tmux: tune config

--- a/xdg_config/tmux/nord.tmux.conf
+++ b/xdg_config/tmux/nord.tmux.conf
@@ -1,27 +1,27 @@
-#+ Options +
-set-option -g status-interval 10
-#+--- Layout ---+
-set-option -g status-justify left
-#+--- Colors ---+
-set-option -g status-bg "#3B4252"
-set-option -g status-fg "#4C566A"
-#+--- Bars ---+
-set-option -g status-left '#[bg=#3B4252] #[bg=#4C566A] #[bg=#434C5E] '
-# set-option -g status-left-length 16
-set-option -g status-right '#{prefix_highlight}#{?#{==:#{@prefix},off},#[fg=#BF616A]X,} #{?pane_synchronized,#[fg=#BF616A]*SYNC*#[default],}#{?SSH_CLIENT,#[fg=#81A1C1]SSH#[default],} #[bg=#3B4252]#[fg=#D8DEE9] #[fg=#88C0D0][#S] #[bg=#3B4252]#[fg=#EBCB8B] #(date "+%a %b %d %H:%M") #[bg=#434C5E] #[bg=#4C566A] #[bg=#3B4252] '
+# Nord theme for tmux
+# Color palette: https://www.nordtheme.com/
 
-#+ Panes +
-set-option -g pane-border-status bottom
-set-option -g pane-border-format " #{?pane_active,#{?#{==:#{@prefix},off},#[fg=#BF616A],}*,}#{pane_index} #{pane_current_command} #{?#{==:#{status},off}, (#{window_index}/#{session_windows}:#{window_name}),}"
-set-option -g pane-active-border-style fg="#4C566A"
-set-option -g pane-border-style fg="#3B4252"
+# Status bar - General
+set -g status-interval 10
+set -g status-justify left
+set -g status-bg "#3B4252"
+set -g status-fg "#4C566A"
 
-#+--- Windows ---+
+# Status bar - Left (decorative bars)
+set -g status-left '#[bg=#3B4252] #[bg=#4C566A] #[bg=#434C5E] '
 
-set-window-option -g window-status-format '#[bg=#3B4252]#{?window_activity_flag,#[fg=#BF616A],#[fg=#81A1C1]} [#{?monitor-activity,^,}#I] #[bg=#3B4252]#[fg=#81A1C1]#W#[bg=#3B4252]#[fg=#B48EAD]#F '
-set-window-option -g window-status-current-format '#[bg=#3B4252]#{?window_activity_flag,#[fg=#BF616A],#[fg=#A3BE8C]} [#{?monitor-activity,^,}#I] #[bg=#3B4252]#[fg=#A3BE8C]#W#[bg=#3B4252]#[fg=#B48EAD]#F '
-set-window-option -g window-status-separator '|' # ⸽
+# Status bar - Right (informative)
+set -g status-right '#{?pane_synchronized,#[fg=#BF616A]*SYNC*#[default] ,}#{?SSH_CLIENT,#[fg=#81A1C1]SSH#[default] ,}#[fg=#88C0D0][#S] #[fg=#EBCB8B]%a %b %d %H:%M '
 
-set-window-option -g window-status-bell-style 'none'
-set-window-option -g window-status-activity-style 'blink'
+# Panes
+set -g pane-border-status bottom
+set -g pane-border-format " #{?pane_active,#[bold],}#{pane_index} #{pane_current_command}#{?pane_active,#[nobold],} "
+set -g pane-active-border-style "fg=#3B4252"
+set -g pane-border-style "fg=#2E3440"
 
+# Windows
+setw -g window-status-format '#[fg=#81A1C1][#I] #W#{?window_activity_flag,!,}'
+setw -g window-status-current-format '#[fg=#A3BE8C,bold][#I] #W#{?window_activity_flag,!,}#[nobold]'
+setw -g window-status-separator ' • '
+setw -g window-status-bell-style 'none'
+setw -g window-status-activity-style 'blink'
