--- a/xdg_config/tmux/tmux.conf
+++ b/xdg_config/tmux/tmux.conf
@@ -4,153 +4,158 @@
 #    197: RGB: (flag) true
 #    223: Tc: (flag) true
 
+# ============================================================================
+# 1. Terminal & Colors
+# ============================================================================
+
 # Use "tmux-256color" if available, to enable more capabilities.
 if-shell 'infocmp tmux-256color' 'set -g default-terminal "tmux-256color"' 'set -g default-terminal "screen-256color"'
-set -sa terminal-overrides ',*:Tc'                 # Enable truecolor
-set -sa terminal-overrides ",*:RGB"                # Enable truecolor
+
+# Text styles
 set -sa terminal-overrides ',*:sitm=\E[3m'         # Enable italics
 set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm' # Enable undercurl
-set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m' # Enable undercurl color - needs tmux-3.0
-set -ga terminal-features ",*:hyperlinks"
+set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
+# Terminal features
+set -ga terminal-features ",*:RGB:focus:sync:hyperlinks"
+
+# ============================================================================
+# 2. Server Options (Protocol-level, all sessions)
+# ============================================================================
+
+set -s set-clipboard on         # OSC 52 clipboard support
+set -s allow-passthrough all    # Allow escape sequences (Kitty graphics, etc.)
+set -s extended-keys on         # Extended key sequences (Shift+Enter, etc.)
+
+# ============================================================================
+# 3. Session Options (Session-level defaults)
+# ============================================================================
+
+set -g mouse off
+set -g mode-keys vi
+set -g focus-events on
+set -g history-limit 102400
+set -g monitor-activity on
+set -g repeat-time 200
+set -g escape-time 2
+set -g display-time 3000
+set -g message-style "bg=#3B4252,fg=#A3BE8C"
+# set -g default-command "${SHELL}"
+
+# ============================================================================
+# 4. Prefix & Key Bindings
+# ============================================================================
 
 unbind C-b
 set -g prefix C-f
 bind c-f send-prefix
 
-####### option {{{
-set -g mouse off
-set -g mode-keys vi
-set -g focus-events on
-set -g set-clipboard on
-set -g history-limit 102400
-set -g monitor-activity off
-set -g repeat-time 200
-set -g escape-time 2
-# set -g default-command "${SHELL}"
-set -g allow-passthrough all
-set -g extended-keys on
-# }}}
-
-####### bind {{{
-# Edit & Reload config file
+# Edit & Reload config
 bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display 'tmux.conf sourced'
 bind e new-window -n "tmux.conf" "\${EDITOR:-vi} $XDG_CONFIG_HOME/tmux/tmux.conf && tmux source $XDG_CONFIG_HOME/tmux/tmux.conf && tmux display \"tmux.conf sourced\""
 
-######## Copy Mode{{{
+# Session & Window control
+bind c-x kill-session
+bind X kill-window
+bind x kill-pane
+
+# Status line toggle
+unbind t
+bind t set status
+
+# Copy mode
 bind v copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi Y send-keys -X copy-selection
 bind -T copy-mode-vi ] send-keys -X next-prompt
 bind -T copy-mode-vi [ send-keys -X previous-prompt
-# }}}
 
-bind c-x kill-session
-bind X kill-window
-bind x kill-pane
+# Buffer/paste
+unbind -T prefix p
+bind p paste-buffer
+bind P choose-buffer
 
-# Window {{{
-# Create Window
+# ============================================================================
+# 5. Window & Pane Management
+# ============================================================================
+
+# Create window
 bind c new-window -c "#{pane_current_path}"
 bind C command-prompt -p "Name of new window: " "new-window -n '%%' -c '#{pane_current_path}'"
-# Move windows
-bind -r \[ swap-window -t -1\; select-window -t -1
-bind -r \] swap-window -t +1\; select-window -t +1
-# Navigation windows
+
+# Window navigation & movement
 bind -r C-n next-window
 bind -r C-p previous-window
-# bind -r C-h select-window -t :-
-# bind -r C-l select-window -t :+
-
-# select last window
 bind -r \\ select-window -l
-# Toggle monitor activity
+bind -r \[ swap-window -t -1\; select-window -t -1
+bind -r \] swap-window -t +1\; select-window -t +1
 bind C-m setw monitor-activity
-# }}}
 
-# Pane {{{
-# Pane spliting
+# Pane split
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 unbind \"
 bind - split-window -v -c "#{pane_current_path}"
-# Vim style spliting
 bind C-v split-window -h -c '#{pane_current_path}'
 bind C-s split-window -v -c '#{pane_current_path}'
-# Navigation pane
-bind -r h select-pane -LZ  
-bind -r j select-pane -DZ  
-bind -r k select-pane -UZ  
-bind -r l select-pane -RZ  
-bind -r C-h select-pane -LZ
-bind -r C-j select-pane -DZ
-bind -r C-k select-pane -UZ
-bind -r C-l select-pane -RZ
-# Resize pane
+
+# Pane navigation
+bind -r h select-pane -LZ
+bind -r j select-pane -DZ
+bind -r k select-pane -UZ
+bind -r l select-pane -RZ
+
+# Pane resize
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Pane move
 bind -r < command-prompt -p "pane from:"  "move-pane -d -h -s '%%'"
 bind -r > command-prompt -p "pane to:"    "move-pane -d -h -t '%%'"
-# }}}
 
-# Buffer {{{
-unbind -T prefix p
-bind p paste-buffer
-bind P choose-buffer 
-# }}}
+# Duplicate pane
+bind-key y run-shell '$XDG_CONFIG_HOME/tmux/scripts/_tmux_duplicate_pane.sh -h'
 
-# Status line
-unbind t
-bind t set status
-
-# Send the command to all panes/windows in current session
+# Broadcast to all panes in session
 unbind S
 bind S command-prompt -p "Command(all panes in session):" \
          "run \"tmux list-panes -s -F '##{session_name}:##{window_index}.##{pane_index}' \
                 | xargs -I PANE tmux send-keys -t PANE '%1' Enter\""
-# Duplicate Pane
-bind-key -T prefix y run-shell '$XDG_CONFIG_HOME/tmux/scripts/_tmux_duplicate_pane.sh -h'
-source -q $XDG_CONFIG_HOME/tmux/output_selecter.tmux
-# }}}
 
-####### UI {{{
+# Output selection
+source -q $XDG_CONFIG_HOME/tmux/output_selecter.tmux
+
+# ============================================================================
+# 6. UI & Theme
+# ============================================================================
+
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 
 set -g automatic-rename on
-# Rename window to current directory tail
 set -g automatic-rename-format '#{b:pane_current_path}'
 
-# Set the terminal title
 set -g set-titles on
-# set -g set-titles-string '[#{session_name}]:#{pane_current_path}'
-# https://github.com/neovim/neovim/issues/12944#issuecomment-698056591
-set-option -g set-titles-string '#{pane_title}' # Title of pane (can be set by application)
+set -g set-titles-string '#{pane_title}'
 
-source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf # theme
-# }}}
+source -q $XDG_CONFIG_HOME/tmux/nord.tmux.conf
 
-####### Plugins {{{
-# install: prefix + I
-# update: prefix + U
-# remove: prefix + alt + u
+# ============================================================================
+# 7. External Tools
+# ============================================================================
 
-# # https://github.com/tmux-plugins/tpm
-# set -g @plugin 'tmux-plugins/tpm'
-# # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-#
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
-
-# }}}1
-
-# go install github.com/abhinav/tmux-fastcopy@latest
+# fastcopy - https://github.com/abhinav/tmux-fastcopy
 set-option -g @fastcopy-action 'tmux load-buffer -w -'
 set-option -g @fastcopy-regex-url '\b[a-z]+://[[:alnum:]\.\-\_\/]+'
 bind-key f run-shell -b tmux-fastcopy
 
+# Plugins (TPM)
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
 
 ## vim: foldmethod=marker
