tmux: fix status right

--- a/xdg_config/tmux/nord.tmux.conf
+++ b/xdg_config/tmux/nord.tmux.conf
@@ -10,8 +10,8 @@ set -g status-fg "#4C566A"
 # Status bar - Left (decorative bars)
 set -g status-left '#[bg=#3B4252] #[bg=#4C566A] #[bg=#434C5E] '
 
-# Status bar - Right (informative)
-set -g status-right '#{?pane_synchronized,#[fg=#BF616A]*SYNC*#[default] ,}#{?SSH_CLIENT,#[fg=#81A1C1]SSH#[default] ,}#[fg=#88C0D0][#S] #[fg=#EBCB8B]%a %b %d %H:%M '
+# Status bar - Right (decorative bars + informative)
+set -g status-right '#{?pane_synchronized,#[fg=#BF616A]*SYNC*#[default] ,}#{?SSH_CLIENT,#[fg=#81A1C1]SSH#[default] ,}#[fg=#88C0D0][#S] #[fg=#EBCB8B]%a %b %d %H:%M #[bg=#434C5E] #[bg=#4C566A] #[bg=#3B4252] '
 
 # Panes
 set -g pane-border-status bottom
